--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,21 @@
-name: lukencode
-permalink: /:year/:month/:day/:title/
+# Dependencies
+#markdown:         redcarpet
+#highlighter:      pygments
+
+plugins: [jekyll-paginate]
+
+# Setup
+name:             lukencode
+title:            lukencode
+permalink:        /:year/:month/:day/:title/
+tagline:          'development blog by Luke Lowrey'
+description:      '<p>A  blog by Luke Lowrey - development team manager (and developer!) specialising in web applications.</p>						
+                  <p>Founder of <a href="https://austechjobs.com.au">austechjobs.com.au</a> a job board for high quality Australian tech jobs.</p>'
+url:              http://lukencode.com
+baseurl:          /
+
+author:
+  name:           'Luke Lowrey'
+  url:            https://twitter.com/lukencode
+  
+paginate:         10
